--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ main {
 }
 
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/img1.jpeg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/img1.jpeg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
